--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "nanoid": "^3.1.20",
+    "node-cache": "^5.1.2",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.6.0",
     "nodemailer-smtp-transport": "^2.7.4",
